--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
 
   <!-- Hero Slideshow -->
   <section class="hero-slideshow">
-    <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1400&q=80');"></div>
-    <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=1400&q=80');"></div>
-    <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=1400&q=80');"></div>
+    <div class="slide active" style="background-image: url('images/hero/hero.jpg');"></div>
+    <div class="slide" style="background-image: url('images/hero/hero1.jpg');"></div>
+    <div class="slide" style="background-image: url('images/hero/hero2.jpg');"></div>
+
     <div class="hero-content">
       <h1>Transform Your Home</h1>
       <p>Beautiful interiors tailored to your lifestyle.</p>
