--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     /* Hero Slideshow */
     .hero-slideshow {
       position: relative;
-      height: 70vh;
+      height: 90vh;
       overflow: hidden;
     }
     .slide {
@@ -43,7 +43,7 @@
       width: 100%;
       height: 100%;
       background-size: cover;
-      background-position: center;
+      background-position: center top;
       opacity: 0;
       transition: opacity 1s ease-in-out;
     }
