--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@ nav.scrolled ul li a:hover {
 
     /* Hero Slideshow */
     .hero-slideshow {
+      margin-top: 0;
       position: relative;
       height: 100vh;
       overflow: hidden;
-      padding-top: 60px; /* so navbar doesn't overlap hero content */
+      padding-top: 0;
+      z-index: 1;
     }
     .slide {
       position: absolute;
