--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       padding: 15px 0;
       z-index: 9999;
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
+      padding-right: 40px;
       transition: background-color 0.3s ease, color 0.3s ease;
       font-weight: 600;
       font-size: 1.1rem;
