--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ nav.scrolled ul li a:hover {
       <img src="images/clients/Client3.jpg" alt="Client 3 Logo" loading="lazy" />
       <img src="images/clients/Client4.jpg" alt="Client 4 Logo" loading="lazy" />
       <img src="images/clients/Client5.jpg" alt="Client 5 Logo" loading="lazy" />
-      <img src="images/clients/Client6.jpg" alt="Client 6 Logo" loading="lazy" />
+      <img src="images/clients/Client6.png" alt="Client 6 Logo" loading="lazy" />
     </div>
   </div>
 </section>
