--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ nav ul {
 }
 
 nav ul li a {
-  color: white; /* white on transparent navbar */
+  color: #222; /* white on transparent navbar */
   text-decoration: none;
   padding: 8px 10px;
   border-radius: 5px;
   text-shadow: 0 0 5px rgba(0,0,0,0.7);
   transition: color 0.3s ease, background-color 0.3s ease;
-  font-weight: 600;
+  font-weight: 650;
 }
 
 nav ul li a:hover {
