--- a/index.html
+++ b/index.html
@@ -402,23 +402,45 @@ nav.scrolled ul li a:hover {
   </section>
 
   <!-- What We Do -->
-  <section id="whatwedo" class="container">
-    <h2 class="section-title">What We Do</h2>
-    <div class="what-we-do">
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Modular Kitchens" />
-        <h3>Modular Kitchens</h3>
+  <section id="what-we-do" class="py-12 bg-gray-50">
+  <div class="container mx-auto px-4 text-center">
+    <h2 class="text-4xl font-bold mb-4">What We Do</h2>
+    <p class="text-gray-600 mb-12">Transforming every corner of your space with style and functionality.</p>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+      
+      <!-- Living -->
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-lg transition">
+        <img src="images/whatwedo/living.jpg" alt="Living" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-semibold mb-2">Living</h3>
+        <p class="text-gray-600">Designing cozy, modern living spaces tailored to your lifestyle.</p>
       </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=400&q=80" alt="Wardrobe Design" />
-        <h3>Wardrobe Design</h3>
+
+      <!-- Bedroom -->
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-lg transition">
+        <img src="images/whatwedo/bedroom.jpg" alt="Bedroom" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-semibold mb-2">Bedroom</h3>
+        <p class="text-gray-600">Elegant wardrobes and bedroom setups for comfort and storage.</p>
       </div>
-      <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Room Interiors" />
-        <h3>Room Interiors</h3>
+
+      <!-- Kitchen -->
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-lg transition">
+        <img src="images/whatwedo/kitchen.jpg" alt="Kitchen" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-semibold mb-2">Kitchen</h3>
+        <p class="text-gray-600">Smart kitchen interiors with efficient, beautiful layouts.</p>
       </div>
+
+      <!-- Exteriors -->
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-lg transition">
+        <img src="images/whatwedo/exteriors.jpg" alt="Exteriors" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-semibold mb-2">Exteriors</h3>
+        <p class="text-gray-600">Stunning exterior designs that enhance your property’s curb appeal.</p>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Achievements -->
   <section id="achievements" class="container achievements">
