--- a/index.html
+++ b/index.html
@@ -2,490 +2,271 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interior Design - Inspired Layout</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Interior Design Company</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"/>
   <style>
-    /* Reset */
-    * {
-      box-sizing: border-box;
+    body {
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-    }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fafafa;
-      color: #333;
-      line-height: 1.6;
-      scroll-behavior: smooth; /* for smooth scroll on anchor links */
-    }
-    <nav>
-      <ul>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#services">What We Do</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#clients">Clients</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    a {
-      color: #c17f3e;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+      box-sizing: border-box;
     }
 
-    /* Transparent fixed navbar */
-    nav {
-      position: fixed;
+    .hero {
+      position: relative;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: rgba(255, 255, 255, 0.9);
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      padding: 15px 0;
-      z-index: 9999;
+      z-index: 10;
+    }
+
+    .logo {
       display: flex;
-      justify-content: flex-end;
-      padding-right: 40px;
-      transition: background-color 0.3s ease, color 0.3s ease;
-      font-weight: 600;
-      font-size: 1.1rem;
-      user-select: none;
-      background-color: transparent; /* start transparent */
-}
+      align-items: center;
+    }
 
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 40px;
-  margin: 0;
-  padding: 0;
-}
+    .logo img {
+      height: 40px;
+      margin-right: 10px;
+    }
 
-nav ul li a {
-  color: #222; /* white on transparent navbar */
-  text-decoration: none;
-  padding: 8px 10px;
-  border-radius: 5px;
-  text-shadow: 0 0 5px rgba(0,0,0,0.7);
-  transition: color 0.3s ease, background-color 0.3s ease;
-  font-weight: 650;
-}
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
 
-nav ul li a:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-  color: white;
-}
+    .nav-links a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
 
-/* Navbar style after scrolling past hero */
-nav.scrolled {
-  background-color: white;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-}
-
-nav.scrolled ul li a {
-  color: #333; /* dark text on white background */
-  text-shadow: none;
-}
-
-nav.scrolled ul li a:hover {
-  background-color: #c17f3e;
-  color: white;
-}
-
+    .hero-image img {
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+    }
 
     .container {
-      width: 90%;
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 40px 0;
+      padding: 4rem 2rem;
     }
 
-    /* Hero Slideshow */
-    .hero-slideshow {
-      margin-top: 0;
-      position: relative;
-      height: 100vh;
-      overflow: hidden;
-      padding-top: 0;
-      z-index: 1;
-    }
-    .slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center top;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-    }
-    .slide.active {
-      opacity: 1;
-    }
-    .slide::after {
-      content: none;
-      /*position: absolute;
-      top:0; left:0; right:0; bottom:0;
-      background-color: rgba(0, 0, 0, 0.4);
-      z-index: 1;*/
-    }
-    .hero-content {
-      position: absolute;
-      z-index: 2;
-      top: 50%;
-      left: 60px;
-      transform: translateY(-50%);
-      color: #fff;
-      max-width: 600px;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-    }
-    .hero-content h1 {
-      font-size: 3.5rem;
-      margin-bottom: 20px;
-      font-weight: 700;
-    }
-    .hero-content p {
-      font-size: 1.3rem;
-      margin-bottom: 30px;
-      color: #fff;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
-    }
-    .hero-content button {
-      background-color: #c17f3e;
-      border: none;
-      color: white;
-      padding: 12px 30px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      border-radius: 3px;
-      transition: background-color 0.3s ease;
-    }
-    .hero-content button:hover {
-      background-color: #a2672b;
-    }
-
-    /* Section Headings */
-    h2.section-title {
+    .section-title {
       text-align: center;
+      font-size: 2rem;
+      margin-bottom: 2rem;
       color: #c17f3e;
-      font-size: 2.5rem;
-      margin-bottom: 40px;
-      font-weight: 700;
-      letter-spacing: 1.2px;
     }
 
-    /* Other Sections - Keep your existing CSS unchanged */
-    .what-we-do, .achievements {
-      display: flex;
-      flex-wrap: wrap;
+    .subsection {
+      margin-bottom: 1.5rem;
+    }
+
+    /* What We Do Section (2x2 Grid) */
+    .what-we-do-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
       gap: 30px;
       justify-content: center;
+      align-items: stretch;
     }
+
     .service-card {
       background: white;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 8px;
       overflow: hidden;
-      flex: 1 1 280px;
-      max-width: 320px;
       text-align: center;
       transition: transform 0.3s ease;
     }
+
     .service-card:hover {
       transform: translateY(-8px);
     }
+
     .service-card img {
       width: 100%;
       height: 200px;
       object-fit: cover;
     }
+
     .service-card h3 {
       padding: 15px;
       font-size: 1.3rem;
       color: #c17f3e;
     }
 
-    .about-us {
-      padding: 60px 0;
-      max-width: 900px;
-      margin: 0 auto;
+    /* Gallery */
+    .gallery .project-folder {
+      margin-bottom: 3rem;
+    }
+
+    .media-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+
+    /* Achievements */
+    .achievements {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+
+    .achievement {
       text-align: center;
-    }
-    .about-us h2 {
-      margin-bottom: 25px;
-      color: #c17f3e;
-    }
-    .about-us p {
-      font-size: 1.1rem;
-      color: #555;
-      margin-bottom: 20px;
-    }
-    .about-us .subsection {
-      margin-top: 40px;
-      text-align: left;
-    }
-    .about-us .subsection h4 {
-      color: #a36a1a;
-      margin-bottom: 10px;
-    }
-    .about-us .subsection p {
-      font-size: 1rem;
-      color: #666;
-      line-height: 1.5;
+      max-width: 200px;
     }
 
-    .contact {
-      background: #c17f3e;
-      color: white;
-      padding: 50px 20px;
+    .achievement img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    /* Contact */
+    .contact-info p {
+      margin: 8px 0;
+    }
+
+    /* Footer */
+    .footer {
       text-align: center;
-    }
-    .contact h2 {
-      margin-bottom: 25px;
-      font-weight: 700;
-      font-size: 2.2rem;
-    }
-    .contact p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-    .contact a {
-      color: white;
-      font-weight: 600;
-      font-size: 1.1rem;
-      border: 2px solid white;
-      padding: 12px 30px;
-      border-radius: 30px;
-      transition: background-color 0.3s ease, color 0.3s ease;
-      display: inline-block;
-      text-decoration: none;
-    }
-    .contact a:hover {
-      background-color: white;
-      color: #c17f3e;
+      padding: 1rem;
+      background-color: #f4f4f4;
+      font-size: 0.9rem;
     }
 
-    .clients-section {
-  padding: 60px 20px;
-  background-color: #fff; /* clean white background */
-  color: #222;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  box-shadow: inset 0 0 30px rgba(0,0,0,0.05); /* subtle inner shadow */
-}
+    @media (max-width: 768px) {
+      .what-we-do-grid {
+        grid-template-columns: 1fr;
+      }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.section-title {
-  font-size: 2.8rem;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 8px;
-  color: #1a1a1a;
-}
-
-.section-subtitle {
-  text-align: center;
-  font-size: 1.15rem;
-  font-weight: 400;
-  color: #666;
-  margin-bottom: 40px;
-  letter-spacing: 0.03em;
-  font-style: italic;
-}
-
-.clients-logos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 40px;
-}
-
-.clients-logos img {
-  max-width: 160px;
-  max-height: 130px;
-  object-fit: contain;
-  filter: none; /* keep original colors */
-  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-  border-radius: 8px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  background-color: #fff;
-  padding: 12px;
-}
-
-.clients-logos img:hover,
-.clients-logos img:focus {
-  transform: scale(1.1);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-  cursor: pointer;
-  outline: none;
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  .clients-logos img {
-    max-width: 120px;
-    max-height: 70px;
-    padding: 8px;
-  }
-}
-
-@media (max-width: 480px) {
-  .section-title {
-    font-size: 2rem;
-  }
-
-  .section-subtitle {
-    font-size: 1rem;
-    margin-bottom: 30px;
-  }
-
-  .clients-logos {
-    gap: 25px;
-  }
-}
-
+      .nav-links {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
   </style>
 </head>
 <body>
-
-  <!-- Transparent Navbar -->
-  <nav id="navbar">
-    <ul>
-      <li><a href="#aboutus">About Us</a></li>
-      <li><a href="#whatwedo">What We Do</a></li>
-      <li><a href="#achievements">Achievements</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <!-- Hero Slideshow -->
-  <section class="hero-slideshow">
-  <div class="slide active" style="background-image: url('images/hero/hero.jpg');">
-    <div class="hero-content">
-      <h1>Transform Your Home</h1>
-      <p>Beautiful interiors tailored to your lifestyle.</p>
+  <header class="hero">
+    <nav class="navbar">
+      <div class="logo">
+        <img src="images/logo.png" alt="Company Logo" />
+        <span>My Interior Co.</span>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#whatwedo">What We Do</a></li>
+        <li><a href="#gallery">Projects</a></li>
+        <li><a href="#achievements">Achievements</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="hero-image">
+      <img src="images/hero1.jpg" alt="Interior Design Hero Image"/>
     </div>
-  </div>
-  <div class="slide" style="background-image: url('images/hero/hero1.jpg');">
-    <div class="hero-content">
-      <h1>Design Your Dream Space</h1>
-      <p>Creating environments that inspire and relax.</p>
-    </div>
-  </div>
-  <div class="slide" style="background-image: url('images/hero/hero2.jpg');">
-    <div class="hero-content">
-      <h1>Elegance Meets Comfort</h1>
-      <p>Innovative designs for modern living.</p>
-    </div>
-  </div>
-</section>
+  </header>
 
-
-  <!-- About Us -->
-  <section id="aboutus" class="about-us container">
-    <h2>About Us</h2>
-    <p>We are passionate about designing spaces that blend elegance, comfort, and functionality. Our expert team transforms ideas into reality with attention to every detail.</p>
+  <section id="about" class="container">
+    <h2 class="section-title">About Us</h2>
+    <p>We are passionate about creating beautiful and functional interior spaces. Our team transforms your vision into reality.</p>
     <div class="subsection">
-      <h4>Our Mission</h4>
-      <p>To create inspiring interior spaces that elevate the quality of life for our clients.</p>
+      <h3>Mission</h3>
+      <p>To deliver innovative interior design solutions that meet our clients’ needs and exceed expectations.</p>
     </div>
     <div class="subsection">
-      <h4>Our Vision</h4>
-      <p>To be the leading interior design company recognized for innovation and excellence.</p>
+      <h3>Vision</h3>
+      <p>To be a leading interior design firm known for creativity, quality, and customer satisfaction.</p>
     </div>
     <div class="subsection">
-      <h4>Our Values</h4>
-      <p>Integrity, creativity, and customer satisfaction are at the heart of everything we do.</p>
+      <h3>Our Values</h3>
+      <p>Creativity, Integrity, Excellence, and Teamwork.</p>
     </div>
   </section>
 
-  <!-- What We Do -->
   <section id="whatwedo" class="container">
     <h2 class="section-title">What We Do</h2>
-    <div class="what-we-do">
+    <div class="what-we-do-grid">
       <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Modular Kitchens" />
-        <h3>Modular Kitchens</h3>
+        <img src="images/services/service1.jpg" alt="Service 1">
+        <h3>Interior Design</h3>
       </div>
       <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=400&q=80" alt="Wardrobe Design" />
-        <h3>Wardrobe Design</h3>
+        <img src="images/services/service2.jpg" alt="Service 2">
+        <h3>Space Planning</h3>
       </div>
       <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Room Interiors" />
-        <h3>Room Interiors</h3>
+        <img src="images/services/service3.jpg" alt="Service 3">
+        <h3>Furniture Selection</h3>
+      </div>
+      <div class="service-card">
+        <img src="images/services/service4.jpg" alt="Service 4">
+        <h3>Project Management</h3>
       </div>
     </div>
   </section>
 
-  <!-- Achievements -->
-  <section id="achievements" class="container achievements">
+  <section id="gallery" class="container">
+    <h2 class="section-title">Our Projects</h2>
+    <div class="gallery">
+      <div class="project-folder">
+        <h3>Living Room Makeover</h3>
+        <div class="media-grid">
+          <img src="images/gallery/livingroom1.jpg" alt="Living Room 1" />
+          <img src="images/gallery/livingroom2.jpg" alt="Living Room 2" />
+          <video controls>
+            <source src="images/gallery/livingroom-tour.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="achievements" class="container">
     <h2 class="section-title">Achievements</h2>
     <div class="achievements">
-      <div class="service-card">
-        <img src="images/achievements/img1.jpg" alt="Award 1" />
-        <h3>Best Interior Design 2023</h3>
+      <div class="achievement">
+        <img src="images/achievements/award1.jpg" alt="Award 1" />
+        <p>Best Design Award 2022</p>
       </div>
-      <div class="service-card">
-        <img src="images/achievements/img2.jpg" alt="Award 2" />
-        <h3>Top 10 Innovators</h3>
-      </div>
-      <div class="service-card">
-        <img src="images/achievements/img3.jpg" alt="Award 3" />
-        <h3>Customer Choice Award</h3>
+      <div class="achievement">
+        <img src="images/achievements/award2.jpg" alt="Award 2" />
+        <p>Client Choice Award 2023</p>
       </div>
     </div>
   </section>
 
-  <!-- Clinets section -->
-  <section id="clients" class="clients-section">
-  <div class="container">
-    <h2 class="section-title">Our Clients</h2>
-    <p class="section-subtitle">Trusted by industry leaders and innovators worldwide</p>
-    <div class="clients-logos">
-      <img src="images/clients/Client1.jpg" alt="Client 1 Logo" loading="lazy" />
-      <img src="images/clients/Client2.jpg" alt="Client 2 Logo" loading="lazy" />
-      <img src="images/clients/Client3.jpg" alt="Client 3 Logo" loading="lazy" />
-      <img src="images/clients/Client4.jpg" alt="Client 4 Logo" loading="lazy" />
-      <img src="images/clients/Client5.jpg" alt="Client 5 Logo" loading="lazy" />
-      <img src="images/clients/Client6.png" alt="Client 6 Logo" loading="lazy" />
+  <section id="contact" class="container">
+    <h2 class="section-title">Contact Us</h2>
+    <div class="contact-info">
+      <p>Email: contact@myinteriorco.com</p>
+      <p>Phone: +1 234 567 890</p>
+      <p>Address: 123 Interior Lane, Design City</p>
     </div>
-  </div>
-</section>
-
-
-  <!-- Contact -->
-  <section id="contact" class="contact">
-    <h2>Contact Us</h2>
-    <p>Reach out to us to start your dream project today!</p>
-    <a href="mailto:contact@interiordesign.com">Email Us</a>
   </section>
 
-  <script>
-    // Change navbar background on scroll
-    const nav = document.querySelector('nav');
-    const heroHeight = document.querySelector('.hero-slideshow').offsetHeight;
-
-    window.addEventListener('scroll', () => {
-      if (window.scrollY > heroHeight - 80) { 
-        nav.classList.add('scrolled');
-      } else {
-        nav.classList.remove('scrolled');
-      }
-    });
-
-    // Hero slideshow (simple fade)
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.slide');
-    function nextSlide() {
-      slides[currentSlide].classList.remove('active');
-      currentSlide = (currentSlide + 1) % slides.length;
-      slides[currentSlide].classList.add('active');
-    }
-    setInterval(nextSlide, 5000); // change slide every 5 seconds
-  </script>
-
+  <footer class="footer">
+    <p>&copy; 2025 My Interior Co. All rights reserved.</p>
+  </footer>
 </body>
 </html>
