--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@ nav.scrolled ul li a:hover {
     }
     .what-we-do {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      /*grid-template-rows: repeat(2, auto);   /* 2 rows */ */
-      gap: 30px;
+      grid-template-columns: repeat(2, 1fr); /* 2 columns */
+      grid-template-rows: repeat(2, auto);   /* 2 rows */
+      gap: 50px;
       justify-items: center; /* center cards in each grid cell */
-      max-width: 900px; /* optional: limit container width for neatness */
+      max-width: 800px; /* optional: limit container width for neatness */
       margin: 0 auto; /* center container */
     }
 
@@ -197,8 +197,8 @@ nav.scrolled ul li a:hover {
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 8px;
       overflow: hidden;
-      flex: 1 1 350px;
-      max-width: 400px;
+      flex: 1 1 280px;
+      max-width: 320px;
       text-align: center;
       transition: transform 0.3s ease;
     }
