--- a/index.html
+++ b/index.html
@@ -357,6 +357,52 @@ nav.scrolled ul li a:hover {
     gap: 25px;
   }
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 99999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 800px;
+  position: relative;
+  text-align: center;
+}
+
+.modal-images {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.modal-images img {
+  max-width: 45%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+.close {
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 
   </style>
 </head>
@@ -418,20 +464,40 @@ nav.scrolled ul li a:hover {
     <h2 class="section-title">What We Do</h2>
     <div class="what-we-do">
       <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Modular Kitchens" />
-        <h3>Modular Kitchens</h3>
+        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Kitchen" />
+        <h3>Kitchen</h3>
+      </div>
+      <div class="service-card" data-category="kitchen">
+        <img src="images/kitchen/main.jpg" alt="Kitchen" />
+        <h3>Kitchen</h3>
+        <button class="see-more-btn">See More</button>
       </div>
       <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=400&q=80" alt="Wardrobe Design" />
-        <h3>Wardrobe Design</h3>
+        <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=400&q=80" alt="Bedroom" />
+        <h3>Bedroom</h3>
+      </div>
+      <div class="service-card" data-category="bedroom">
+        <img src="images/bedroom/main.jpg" alt="Bedroom" />
+        <h3>Bedroom</h3>
+        <button class="see-more-btn">See More</button>
       </div>
       <div class="service-card">
-        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Room Interiors" />
-        <h3>Room Interiors</h3>
+        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Living" />
+        <h3>Living</h3>
+      </div>
+      <div class="service-card" data-category="living">
+        <img src="images/living/main.jpg" alt="Living" />
+        <h3>Living</h3>
+        <button class="see-more-btn">See More</button>
       </div>
       <div class="service-card">
       <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Exteriors" />
       <h3>Exteriors</h3>
+      </div>
+      <div class="service-card" data-category="exteriors">
+        <img src="images/exteriors/main.jpg" alt="Exteriors" />
+        <h3>Exteriors</h3>
+        <button class="see-more-btn">See More</button>
       </div>
     </div>
   </section>
@@ -502,6 +568,45 @@ nav.scrolled ul li a:hover {
     }
     setInterval(nextSlide, 5000); // change slide every 5 seconds
   </script>
+  <!-- Modal Popup -->
+<div id="imageModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <div id="modal-images" class="modal-images"></div>
+  </div>
+</div>
+  <script>
+  const modal = document.getElementById('imageModal');
+  const modalImages = document.getElementById('modal-images');
+  const closeBtn = document.querySelector('.modal .close');
+
+  document.querySelectorAll('.see-more-btn').forEach(button => {
+    button.addEventListener('click', function () {
+      const category = this.parentElement.getAttribute('data-category');
+      modalImages.innerHTML = '';
+
+      for (let i = 1; i <= 4; i++) {
+        const img = document.createElement('img');
+        img.src = `images/${category}/${i}.jpg`; // image names: 1.jpg, 2.jpg, ...
+        img.alt = `${category} ${i}`;
+        modalImages.appendChild(img);
+      }
+
+      modal.style.display = 'block';
+    });
+  });
+
+  closeBtn.onclick = () => {
+    modal.style.display = 'none';
+  };
+
+  window.onclick = event => {
+    if (event.target === modal) {
+      modal.style.display = 'none';
+    }
+  };
+</script>
+
 
 </body>
 </html>
